# gainly

./: .gitignore  README.md  pyproject.toml
.streamlit/: .config.toml  secrets.toml
gainly/: eod.py  portfolio.py  yahoo.py
gainly/lit/: main.py  util.py
tests/: test_portfolio.py
