[project]
name = "gainly"
version = "0.1.0"
description = "Track daily valuation and capital gains for a stock portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "pandera>=0.26.1",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "streamlit-extras>=0.7.8",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "watchdog>=6.0.0",
]
